--- a/veteran/facilities.html
+++ b/veteran/facilities.html
@@ -40,8 +40,7 @@
 
 					<header class="major special">
 						<h2>Facilities</h2>
-						<p>Benefits, services and resources for family caregivers of veterans.</p>
-						<p>Includes Compensation, support networks, and legal resources.</p>
+						<p>All county, state and federal Veteran Affairs facilities.</p>
 					</header>
 					<a href="#" class="image fit"><img src="images/facility.jpg" alt="" /></a>
 				</div>
