--- a/veteran/homes.html
+++ b/veteran/homes.html
@@ -17,6 +17,15 @@
 		<script src="js/init.js"></script>
 		<script src="parse.js"></script>
 		<script src="map.js"></script>
+
+		<style>
+
+		table{
+			table-layout: fixed;
+		    width: 88%;
+		    word-wrap: break-word;
+		    margin: auto;
+		}
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 		</noscript>
@@ -57,7 +66,7 @@
 				</div>
 				<div class="6u 12u$(xsmall)">
 				<!-- <div class="table-wrapper"> -->
-					<table class="alt" style="text-align:center;width:80%;border:1px solid black">
+					<table class="alt" style="table-layout:fixed;width:100%">
 						<thead>
 							<tr>
 								<th>Name</th>
@@ -65,7 +74,7 @@
 								<th>link</th>
 							</tr>
 						</thead>
-						<tbody id="data_table" style="text-align:center;width:80%;border:1px solid black">
+						<tbody id="data_table" >
 							<!-- <tr>
 								<td class="">Item 1</td>
 								<td>Description 1.</td>
