added table stuff :D

--- a/veteran/facilities.html
+++ b/veteran/facilities.html
@@ -65,16 +65,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td>Item 1</td>
-								<td>Description 1.</td>
-								<td>link 1</td>
-							</tr>
-							<tr>
-								<td>Item 2</td>
-								<td>Description 2</td>
-								<td>link 2</td>
-							</tr>
+							<!-- JS will add elements to tbody --> 
 						</tbody>
 					</table>
 				</div>
