--- a/veteran/family.html
+++ b/veteran/family.html
@@ -17,6 +17,7 @@
 		<script src="js/init.js"></script>
 		<script src="parse.js"></script>
 		<script src="map.js"></script>
+		<link rel="stylesheet" href="css/base.css"/>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 		</noscript>
@@ -64,17 +65,8 @@
 								<th>link</th>
 							</tr>
 						</thead>
-						<tbody>
-							<tr>
-								<td>Item 1</td>
-								<td>Description 1.</td>
-								<td>link 1</td>
-							</tr>
-							<tr>
-								<td>Item 2</td>
-								<td>Description 2</td>
-								<td>link 2</td>
-							</tr>
+						<tbody id="data_table" >
+							<!-- JS script should insert appropriate values -->
 						</tbody>
 					</table>
 				</div>
